--- a/dev/_modules/smac/optimizer/pSMAC.html
+++ b/dev/_modules/smac/optimizer/pSMAC.html
@@ -259,7 +259,7 @@
 <span class="n">RUNHISTORY_RE</span> <span class="o">=</span> <span class="sa">r</span><span class="s1">&#39;runhistory\.json$&#39;</span>
 
 
-<div class="viewcode-block" id="read"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.pSMAC.html#smac.optimizer.pSMAC.read">[docs]</a><span class="k">def</span> <span class="nf">read</span><span class="p">(</span><span class="n">run_history</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span> 
+<div class="viewcode-block" id="read"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.pSMAC.html#smac.optimizer.pSMAC.read">[docs]</a><span class="k">def</span> <span class="nf">read</span><span class="p">(</span><span class="n">run_history</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span>
          <span class="n">output_dirs</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]],</span>
          <span class="n">configuration_space</span><span class="p">:</span> <span class="n">ConfigurationSpace</span><span class="p">,</span>
          <span class="n">logger</span><span class="p">:</span> <span class="n">logging</span><span class="o">.</span><span class="n">Logger</span><span class="p">):</span>
@@ -270,25 +270,26 @@
 <span class="sd">    run_history : smac.runhistory.RunHistory</span>
 <span class="sd">        RunHistory object to be updated with run information from runhistory</span>
 <span class="sd">        objects stored in the output directory.</span>
-
 <span class="sd">    output_dirs : typing.Union[str,typing.List[str]]</span>
 <span class="sd">        List of SMAC output directories</span>
 <span class="sd">        or Linux path expression (str) which will be casted into a list with</span>
 <span class="sd">        glob.glob(). This function will search the output directories</span>
 <span class="sd">        for files matching the runhistory regular expression.</span>
-
 <span class="sd">    configuration_space : ConfigSpace.ConfigurationSpace</span>
 <span class="sd">        A ConfigurationSpace object to check if loaded configurations are valid.</span>
-
 <span class="sd">    logger : logging.Logger</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">numruns_in_runhistory</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">run_history</span><span class="o">.</span><span class="n">data</span><span class="p">)</span>
     <span class="n">initial_numruns_in_runhistory</span> <span class="o">=</span> <span class="n">numruns_in_runhistory</span>
 
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">output_dirs</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
-        <span class="n">output_dirs</span> <span class="o">=</span> <span class="n">glob</span><span class="o">.</span><span class="n">glob</span><span class="p">(</span><span class="n">output_dirs</span><span class="p">)</span>
+        <span class="n">parsed_output_dirs</span> <span class="o">=</span> <span class="n">glob</span><span class="o">.</span><span class="n">glob</span><span class="p">(</span><span class="n">output_dirs</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">glob</span><span class="o">.</span><span class="n">glob</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">output_dirs</span><span class="p">,</span> <span class="s2">&quot;run_*&quot;</span><span class="p">)):</span>
+            <span class="n">parsed_output_dirs</span> <span class="o">+=</span> <span class="n">glob</span><span class="o">.</span><span class="n">glob</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">output_dirs</span><span class="p">,</span> <span class="s2">&quot;run_*&quot;</span><span class="p">))</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="n">parsed_output_dirs</span> <span class="o">=</span> <span class="n">output_dirs</span>
 
-    <span class="k">for</span> <span class="n">output_directory</span> <span class="ow">in</span> <span class="n">output_dirs</span><span class="p">:</span>
+    <span class="k">for</span> <span class="n">output_directory</span> <span class="ow">in</span> <span class="n">parsed_output_dirs</span><span class="p">:</span>
         <span class="k">for</span> <span class="n">file_in_output_directory</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">listdir</span><span class="p">(</span><span class="n">output_directory</span><span class="p">):</span>
             <span class="n">match</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">match</span><span class="p">(</span><span class="n">RUNHISTORY_RE</span><span class="p">,</span> <span class="n">file_in_output_directory</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">match</span><span class="p">:</span>
@@ -320,12 +321,12 @@
 <span class="sd">        RunHistory object to be saved.</span>
 
 <span class="sd">    output_directory : str</span>
-<span class="sd">    </span>
+
 <span class="sd">    logger : logging.Logger</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">output_filename</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">output_directory</span><span class="p">,</span> <span class="n">RUNHISTORY_FILEPATTERN</span><span class="p">)</span>
-    
+
     <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Saving runhistory to </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span><span class="p">(</span><span class="n">output_filename</span><span class="p">))</span>
 
     <span class="k">with</span> <span class="n">tempfile</span><span class="o">.</span><span class="n">NamedTemporaryFile</span><span class="p">(</span><span class="s1">&#39;wb&#39;</span><span class="p">,</span> <span class="nb">dir</span><span class="o">=</span><span class="n">output_directory</span><span class="p">,</span>
