--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -529,6 +529,8 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.get_cost">get_cost() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
+      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.get_instance_costs_for_config">get_instance_costs_for_config() (smac.runhistory.runhistory.RunHistory method)</a>
+</li>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_remaing_time_budget">get_remaing_time_budget() (smac.stats.stats.Stats method)</a>
 </li>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_remaining_ta_budget">get_remaining_ta_budget() (smac.stats.stats.Stats method)</a>
